nav z-index fix

--- a/src/components/header/header.scss
+++ b/src/components/header/header.scss
@@ -16,7 +16,7 @@
     position: fixed;
     -webkit-box-shadow: 5px 5px 15px 33px #000000;
     box-shadow: 5px 5px 15px 33px #000000;
-    z-index: 1;
+    z-index: 2;
     ul {
       list-style: none;
       display: flex;
